--- a/Menghitung_Mimpi/app/src/main/res/layout/fragment_kalkulator_investasi.xml
+++ b/Menghitung_Mimpi/app/src/main/res/layout/fragment_kalkulator_investasi.xml
@@ -41,8 +41,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/rounded_corner_background"
                 android:ems="10"
-                android:inputType="text"
-                android:padding="10dp"
+                android:inputType="numberSigned"
+                android:padding="15dp"
                 app:layout_constraintStart_toStartOf="@+id/textView65"
                 app:layout_constraintTop_toBottomOf="@+id/textView65" />
 
@@ -73,8 +73,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/rounded_corner_background"
                 android:ems="10"
-                android:inputType="text"
-                android:padding="10dp"
+                android:inputType="numberSigned"
+                android:padding="15dp"
                 app:layout_constraintStart_toStartOf="@+id/textView67"
                 app:layout_constraintTop_toBottomOf="@+id/textView67" />
 
@@ -105,8 +105,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/rounded_corner_background"
                 android:ems="10"
-                android:inputType="text"
-                android:padding="10dp"
+                android:inputType="numberSigned"
+                android:padding="15dp"
                 app:layout_constraintStart_toStartOf="@+id/textView69"
                 app:layout_constraintTop_toBottomOf="@+id/textView69" />
 
@@ -194,7 +194,7 @@
                 android:layout_width="199dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="16dp"
-                android:text="Kamu akan investasi di produk yang returnya?"
+                android:text="Kamu akan investasi di produk yang returnnya?"
                 android:textColor="#000000"
                 app:layout_constraintStart_toStartOf="@+id/textView72"
                 app:layout_constraintTop_toBottomOf="@+id/btnAwalTahun" />
@@ -205,8 +205,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/rounded_corner_background"
                 android:ems="10"
-                android:inputType="text"
-                android:padding="10dp"
+                android:inputType="numberSigned"
+                android:padding="15dp"
                 app:layout_constraintStart_toStartOf="@+id/textView73"
                 app:layout_constraintTop_toBottomOf="@+id/textView73" />
 
