--- a/Menghitung_Mimpi/app/src/main/res/drawable/rounded_bottom_nav.xml
+++ b/Menghitung_Mimpi/app/src/main/res/drawable/rounded_bottom_nav.xml
@@ -2,9 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners
-        android:topLeftRadius="70dp"
-        android:topRightRadius="70dp"
-        android:bottomLeftRadius="70dp"
-        android:bottomRightRadius="70dp"/>
+        android:topLeftRadius="30dp"
+        android:topRightRadius="30dp" />
     <solid android:color="#DFF7E2" />
 </shape>
