--- a/Menghitung_Mimpi/app/src/main/res/layout/activity_main.xml
+++ b/Menghitung_Mimpi/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainer"
         android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="391dp"
+        android:layout_width="match_parent"
         android:layout_height="815dp"
         app:defaultNavHost="true"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -22,6 +22,8 @@
         android:id="@+id/bottomNavigationView"
         android:layout_width="0dp"
         android:layout_height="80dp"
+        app:itemIconTint="@color/black"
+        app:itemTextColor="@color/black"
         android:background="@drawable/rounded_bottom_nav"
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
