--- a/Menghitung_Mimpi/app/src/main/res/layout/fragment_response_kalkulator_infestasi.xml
+++ b/Menghitung_Mimpi/app/src/main/res/layout/fragment_response_kalkulator_infestasi.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout5"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".layout.ResponseKalkulatorInvestasiFragment" >
+    tools:context=".fragment.ResponseKalkulatorInvestasiFragment" >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout7"
