--- a/Menghitung_Mimpi/app/src/main/res/layout/fragment_response_menikah.xml
+++ b/Menghitung_Mimpi/app/src/main/res/layout/fragment_response_menikah.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout7"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".layout.ResponseMenikahFragment">
+    tools:context=".fragment.ResponseMenikahFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout14"
