Login Token -> Auth

--- a/Menghitung_Mimpi/app/src/main/res/layout/fragment_home.xml
+++ b/Menghitung_Mimpi/app/src/main/res/layout/fragment_home.xml
@@ -96,7 +96,7 @@
         app:layout_constraintVertical_bias="0.001" />
 
     <TextView
-        android:id="@+id/textView28"
+        android:id="@+id/tvUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_semibold"
